src/redisearch_rs/rqe_iterators/tests/integration/snapshots/integration__profile_print__not_optimized_with_child.snap
---
source: rqe_iterators/tests/integration/profile_print.rs
assertion_line: 195
expression: reply
---
{"Type": "NOT", "Child iterator": {"Type": "EMPTY"}}
