src/redisearch_rs/rqe_iterators/tests/integration/snapshots/integration__profile_print__numeric_variant_geo.snap
---
source: rqe_iterators/tests/integration/profile_print.rs
expression: reply
---
{"Type": "GEO", "Term": "34,31 - 35,32"}
