src/redisearch_rs/rqe_iterators/tests/integration/snapshots/integration__profile_print__numeric_variant_unfiltered.snap
---
source: rqe_iterators/tests/integration/profile_print.rs
expression: reply
---
{"Type": "NUMERIC", "Term": "1 - 10"}
