src/redisearch_rs/rqe_iterators/tests/integration/snapshots/integration__profile_print__optional_optimized_with_child.snap
---
source: rqe_iterators/tests/integration/profile_print.rs
assertion_line: 216
expression: reply
---
{"Type": "OPTIONAL", "Child iterator": {"Type": "EMPTY"}}
