src/redisearch_rs/rqe_iterators/tests/integration/snapshots/integration__profile_print__profile_wrapping_empty.snap
---
source: rqe_iterators/tests/integration/profile_print.rs
assertion_line: 158
expression: reply
---
{"Type": "EMPTY", "Number of reading operations": 0}
