src/redisearch_rs/rqe_iterators/tests/integration/snapshots/integration__profile_print__term_profile_wrapped.snap
---
source: rqe_iterators/tests/integration/profile_print.rs
expression: reply
---
{
  "Type": "TEXT",
  "Term": b"hello",
  "Number of reading operations": 1,
  "Estimated number of matches": 1
}
