src/redisearch_rs/rqe_iterators/tests/integration/snapshots/integration__profile_print__term_with_query_term.snap
---
source: rqe_iterators/tests/integration/profile_print.rs
expression: reply
---
{"Type": "TEXT", "Term": b"hello"}
