src/redisearch_rs/rqe_iterators/tests/integration/snapshots/integration__profile_print__union_full_print.snap
---
source: rqe_iterators/tests/integration/profile_print.rs
assertion_line: 246
expression: reply
---
{
  "Type": "UNION",
  "Query type": "UNION",
  "Child iterators": [{"Type": "EMPTY"}, {"Type": "EMPTY"}]
}
