src/redisearch_rs/rqe_iterators/tests/integration/snapshots/integration__profile_print__union_limited_geo_prints_full.snap
---
source: rqe_iterators/tests/integration/profile_print.rs
assertion_line: 292
expression: reply
---
{
  "Type": "UNION",
  "Query type": "GEO",
  "Child iterators": [{"Type": "EMPTY"}, {"Type": "EMPTY"}]
}
